# my_async

./: CMakeLists.txt  LICENSE  README.md  main.cpp  my_async.hpp  script.sh  std.hpp
awaiter/: and_then.hpp  concepts.hpp  just.hpp  task.hpp  when_all.hpp
awaiter/details/: current_coroutine.hpp  ignore_return_promise.hpp  make_awaitable.hpp  previous_awaiter.hpp  return_previous.hpp  value_awaiter.hpp
generic/: allocator.cpp  allocator.hpp  cancel.hpp  condition_variable.hpp  generic_io.cpp  generic_io.hpp  io_context.cpp  io_context.hpp  io_context_mt.cpp  io_context_mt.hpp  mutex.hpp  queue.hpp  semaphone.hpp  thread_pool.cpp  thread_pool.hpp  timeout.hpp  when_any.hpp
iostream/: byte_buffer.hpp  file_stream.cpp  file_stream.hpp  pipe_stream.cpp  pipe_stream.hpp  socket_stream.hpp  stream_base.hpp  string_stream.hpp
net/: socket_proxy.cpp  socket_proxy.hpp  uri.cpp  uri.hpp  websocket.hpp
platform/: error_handling.hpp  fs.hpp  futex.hpp  platform_io.cpp  platform_io.hpp  socket.cpp  socket.hpp
test/: CMakeLists.txt
utils/: byteorder.hpp  cacheline.hpp  expected.hpp  finally.hpp  generator_result.hpp  ilist.hpp  non_void_helper.hpp  perf.hpp  random.hpp  rbtree.hpp  reflect.hpp  ring_queue.hpp  simple_map.hpp  spin_mutex.hpp  string_utils.hpp  uninitialized.hpp
